[tool.poetry]
name = "snow-ball"
version = "0.1.0"
description = ""
authors = ["ranguiquan <ranguiquan@gmail.com>"]
readme = "README.md"
packages = [{include = "snow_ball"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
