[tool.poetry]
name = "snow-ball"
version = "0.1.0"
description = ""
authors = ["ranguiquan <ranguiquan@gmail.com>"]
readme = "README.md"
packages = [{include = "snow_ball"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
openpyxl = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
jupyter-black = "^0.3.3"
ipykernel = "^6.21.2"
typing-extensions = "^4.5.0"
pylint = "^2.16.3"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
